@@ -1,48 +1,71 @@
 package az.edu.ada.wm2.lab6.service;
 
+import az.edu.ada.wm2.lab6.model.Category;
 import az.edu.ada.wm2.lab6.model.Product;
+import az.edu.ada.wm2.lab6.model.dto.ProductRequestDto;
+import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
+import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
+import az.edu.ada.wm2.lab6.repository.CategoryRepository;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
+    private final CategoryRepository categoryRepository;
+    private final ProductMapper productMapper;
 
     @Autowired
-    public ProductServiceImpl(ProductRepository productRepository) {
+    public ProductServiceImpl(ProductRepository productRepository,
+                              CategoryRepository categoryRepository,
+                              ProductMapper productMapper) {
         this.productRepository = productRepository;
+        this.categoryRepository = categoryRepository;
+        this.productMapper = productMapper;
     }
 
     @Override
-    public Product createProduct(Product product) {
-        return productRepository.save(product);
+    public ProductResponseDto createProduct(ProductRequestDto productDto) {
+        Product product = productMapper.toEntity(productDto);
+        product.setCategories(getCategoriesByIds(productDto.getCategoryIds()));
+        Product savedProduct = productRepository.save(product);
+        return productMapper.toResponseDto(savedProduct);
     }
 
     @Override
-    public Product getProductById(UUID id) {
-        return productRepository.findById(id)
+    public ProductResponseDto getProductById(UUID id) {
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+        return productMapper.toResponseDto(product);
     }
 
     @Override
-    public List<Product> getAllProducts() {
-        return productRepository.findAll();
+    public List<ProductResponseDto> getAllProducts() {
+        return productRepository.findAll().stream()
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    public Product updateProduct(UUID id, Product product) {
-        if (!productRepository.existsById(id)) {
-            throw new RuntimeException("Product not found with id: " + id);
-        }
+    public ProductResponseDto updateProduct(UUID id, ProductRequestDto productDto) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+
+        product.setProductName(productDto.getProductName());
+        product.setPrice(productDto.getPrice());
+        product.setExpirationDate(productDto.getExpirationDate());
+        product.setCategories(getCategoriesByIds(productDto.getCategoryIds()));
         product.setId(id);
-        return productRepository.save(product);
+
+        Product updatedProduct = productRepository.save(product);
+        return productMapper.toResponseDto(updatedProduct);
     }
 
     @Override
@@ -54,18 +77,29 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public List<Product> getProductsExpiringBefore(LocalDate date) {
+    public List<ProductResponseDto> getProductsExpiringBefore(LocalDate date) {
         return productRepository.findAll().stream()
-                .filter(product -> product.getExpirationDate() != null && 
+                .filter(product -> product.getExpirationDate() != null &&
                         product.getExpirationDate().isBefore(date))
-                .collect(Collectors.toList());
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    public List<Product> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
+    public List<ProductResponseDto> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
         return productRepository.findAll().stream()
-                .filter(product -> product.getPrice().compareTo(minPrice) >= 0 && 
+                .filter(product -> product.getPrice() != null
+                        && product.getPrice().compareTo(minPrice) >= 0
+                        &&
                         product.getPrice().compareTo(maxPrice) <= 0)
-                .collect(Collectors.toList());
+                .map(productMapper::toResponseDto)
+                .toList();
+    }
+
+    private List<Category> getCategoriesByIds(List<UUID> categoryIds) {
+        if (categoryIds == null || categoryIds.isEmpty()) {
+            return new ArrayList<>();
+        }
+        return categoryRepository.findAllById(categoryIds);
     }
 }
